v0.0.554 Continued porting, did mostly codec conversion for block entities and recipes.